feat: Redis 캐시 적용 (캐시 HIT 시 쿼리 0회)
- RedisCacheManager 직접 빈 등록 (Spring Boot 4.1 자동설정 부재)
- 조회 API에 @Cacheable 적용